--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -21,6 +21,7 @@
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
+    "puppeteer": "^24.33.1",
     "tailwindcss": "^4"
   }
 }
